Fix additions to be java 1.8 compatible